--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -12,9 +12,9 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/css/main.css') }}">
 
     {% if title %}
-    <title>Flask Blog - {{ title }}</title>
+    <title>Dakota Erickson - {{ title }}</title>
     {% else %}
-    <title>Flask Blog</title>
+    <title>Dakota Erickson</title>
     {% endif %}
 </head>
 
@@ -27,9 +27,9 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarsExample04">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="{{url_for('main.home') }}">Home <span class="sr-only">(current)</span></a>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{url_for('main.home') }}">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{url_for('main.resume') }}">Resume</a>
