--- a/flaskblog/templates/resume.html
+++ b/flaskblog/templates/resume.html
@@ -25,12 +25,12 @@
         <div class="card body">
           <div class="card-header content-section jumbotron-background" id="headingOne">
             <h2 class="mb-0">
-              <button class="btn btn-block text-white" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <button class="btn btn-block text-white pl-0 pr-0" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                 <div class="float-left lead">
                     Software Engineer
                 </div>
                 <div class="float-right lead dropdown-toggle">
-                    NetApp June 2019 - October 2020
+                    NetApp 06/2019 - 10/2020
                 </div>                
               </button>
             </h2>
@@ -52,7 +52,7 @@
         <div class="card body">
             <div class="card-header content-section jumbotron-background" id="headingTwo">
               <h2 class="mb-0">
-                <button class="btn btn-block text-white collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                <button class="btn btn-block text-white collapsed pl-0 pr-0" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     <div class="float-left lead">
                         Software Contractor
                     </div>
@@ -78,7 +78,7 @@
         <div class="card body">
           <div class="card-header content-section jumbotron-background" id="headingThree">
             <h2 class="mb-0">
-              <button class="btn btn-block text-white collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+              <button class="btn btn-block text-white collapsed pl-0 pr-0" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                 <div class="float-left lead">
                     Technical Support
                 </div>
