--- a/flaskblog/templates/resume.html
+++ b/flaskblog/templates/resume.html
@@ -57,7 +57,7 @@
                         Software Contractor
                     </div>
                     <div class="float-right lead dropdown-toggle">
-                        NetApp June 2018 - May 2019
+                        NetApp 06/2018 - 05/2019
                     </div>  
                 </button>
               </h2>
@@ -83,7 +83,7 @@
                     Technical Support
                 </div>
                 <div class="float-right lead dropdown-toggle">
-                    Textron June 2017 - May 2019
+                    Textron 06/2017 - 05/2019
                 </div> 
               </button>
             </h2>
