--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -49,7 +49,7 @@
                     <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown04" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false">Contact Me</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown04">
-                        <a class="dropdown-item" href="https://www.linkedin.com/in/dakota-erickson">Linkedin</a>
+                        <a class="dropdown-item" href="https://www.linkedin.com/in/dakota-erickson" target="_blank">Linkedin</a>
                         <a class="dropdown-item" value="Email"
                             href='mailto:derickson@gmail.com?subject=Message for Dakota Erickson'>Email</a>
                     </div>
